--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,7 @@ group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
-    maven {
-        url 'https://pkgs.dev.azure.com/reddykrishna147/SVN_Migration/_packaging/SVN_Migration_Feed/maven/v1'
-        name 'SVN_Migration_Feed'
-        authentication {
-            basic(BasicAuthentication)
-        }
-    }
+    mavenCentral()
 }
 
 dependencies {
