- Added support for pgpEncryption and pgpDecryption.
Signed-off-by: vishnu.ganta22 <vishnu.ganta22@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,12 @@ repositories {
 dependencies {
     // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.10.0'
+    implementation 'org.bouncycastle:bcpg-jdk15on:1.70'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    implementation 'org.projectlombok:lombok:1.18.24'
+    implementation 'commons-io:commons-io:2.11.0'
+    //implementation 'com.malkeith:pgp-encryption:1.0-SNAPSHOT'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
